# mechanical-design-software

./: B点击运行设计软件.bat  README.en.md  README.md  requirements.txt  setup.py
A开始界面/: A点击运行.bat  STAR.py  chushi.ui  requirements.txt  zhu.ui  zhujian.ui  力数据.csv  打包exe.spec  未到物料.txt  解压2.py
beamCalculator/: Add_UDL_dialog_window.py  Add_pointLoad_dialog_window.py  Rectangular_cross_section_dialog_window1.py  Untitled.ipynb  beam_calculator_main_window.py  beam_calculator_main_window.spec  fuzhuui.py  pyproject.toml  test_beam.py  开始界面.spec
beamCalculator/.ipynb_checkpoints/: Reset_dialog_window-checkpoint.py
beamCalculator/Beam1/: Beam.py  CantileverdBeam.py
beamCalculator/CrossSection1/: HollowCircularCrossSection.py  __init__.py
beamCalculator/Load1/: Moment.py  PointLoad.py
beamCalculator/Material1/: SteelAISI1045.py
beamCalculator/Support1/: FixedSupport.py  RollerSupport.py  Support.py
beamCalculator/UiFiles/: Add_pointLoad_dialog_window.ui  circle_cross_section_dialog_window.ui  fuzhu.ui
gearbox/: GearDatabase.mdb  demo.py  miniconda创建测试环境并安装包.bat  requirements.txt  traitui.py  齿轮几何计算2.py
notebook储存/: 4000t轴的计算.ipynb  MUJOCO_LOG.TXT  ceshi.xlsm  example - 副本.xlsm  mujoco测试.ipynb  nu.py  nu.xlsm  pybullet.ipynb  requirements.txt  univcam.ipynb  修改新拉格朗日曲柄动力10-9.ipynb  吊耳计算.ipynb  平衡气缸计算.ipynb  新拉格朗日曲柄动力.ipynb  莫尔圆.ipynb  转换凸轮python.ipynb  连接计算.ipynb  链轮.ipynb  齿轮辅助.ipynb
公差计算/: README.md  tbDM_Tolerance_Hole_ES_EI_GBT1800p1_2009.xml  tbDM_Tolerance_IT_Value_GBT1800p1_2009.xml  铜瓦计算.ipynb
凸轮计算/: BA点击运行.bat  requirements.txt  shuju.csv  univcam.py  (+4 more)
(+348 files in other folders)
